fix: horizontal scroll bar

--- a/style.css
+++ b/style.css
@@ -102,7 +102,7 @@ h1 {
   display: flex;
   width: 95%;
   margin-bottom: 50px;
-  margin-top: 20px;
+  margin-top: 30px;
   margin-left: 5%;
   justify-content: center;
 }
